--- a/v2/style-guide/index.html
+++ b/v2/style-guide/index.html
@@ -90,7 +90,7 @@
   <a class="nav-link current">Doc</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><ul>
-      <li><a href="/v2/guide/" class="nav-link current">Guide</a></li>
+      <li><a href="/v2/guide/" class="nav-link">Guide</a></li>
       <li><a href="/v2/api/" class="nav-link">API</a></li>
       <li><a href="/v2/style-guide/" class="nav-link current">Conventions</a></li>
       <li><a href="/v2/examples/" class="nav-link">Exemples</a></li>
@@ -183,7 +183,7 @@
   <a class="nav-link current">Doc</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><ul>
-      <li><a href="/v2/guide/" class="nav-link current">Guide</a></li>
+      <li><a href="/v2/guide/" class="nav-link">Guide</a></li>
       <li><a href="/v2/api/" class="nav-link">API</a></li>
       <li><a href="/v2/style-guide/" class="nav-link current">Conventions</a></li>
       <li><a href="/v2/examples/" class="nav-link">Exemples</a></li>
