--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ window.addEventListener('load', function () {
       >
     </form>
     <p>
-      Vous pourvez lire nos précédentes problématiques et écouter notre podcast sur <a href="https://news.vuejs.org" target="_blank">news.vuejs.org</a>.
+      Vous pouvez lire nos précédentes problématiques et écouter notre podcast sur <a href="https://news.vuejs.org" target="_blank">news.vuejs.org</a>.
     </p>
   </div>
 </div>
@@ -515,7 +515,7 @@ window.addEventListener('load', function () {
     </a>
   </p>
   <p>Publié sous <a href="https://opensource.org/licenses/MIT" target="_blank">Licence MIT</a><br>
-  Copyright &copy; 2014-2018 Evan You</p>
+  Copyright &copy; 2014-2019 Evan You</p>
 </div>
 
 <div id="video-modal" class="modal">
